tools/tests/errors/surf_sw_03.experr
expected 'case' or 'default' in switch body
